# elm-parser

./: Cargo.toml  README.md
examples/: Basic.elm  BrowserElement.elm  Lists.elm  Main.elm  MutateRecord.elm  scce.elm
src/: ast.rs  check.rs  dump.rs  elm.lalrpop  evaluate.rs  expression.rs  import.rs  lexer.rs  lib.rs  main.rs  parser.rs  types.rs
src/ast/: binop.rs  expression.rs  helpers.rs  mod.rs  statement.rs
src/ast/expression/: access.rs  access_function.rs  character.rs  core.rs  float.rs  function.rs  integer.rs  mod.rs  string.rs  variable.rs
src/ast/statement/: comment.rs  core.rs  export.rs  function.rs  import.rs  infix.rs  mod.rs  module.rs  port.rs  type_.rs  type_declaration.rs
src/ast/type_/: core.rs  mod.rs
src/elm/: mod.rs
src/elm/parser/: base.rs  comments.rs  declarations.rs  expose.rs  file.rs  imports.rs  infix.rs  layout.rs  mod.rs  modules.rs  node.rs  numbers.rs  patterns.rs  ranges.rs  state.rs  tokens.rs  typeannotation.rs  typings.rs  whitespace.rs
src/elm/syntax/: comments.rs  declaration.rs  documentation.rs  exposing.rs  expression.rs  file.rs  import.rs  infix.rs  mod.rs  module.rs  modulename.rs  node.rs  pattern.rs  range.rs  signature.rs  type.rs  typealias.rs  typeannotation.rs
