[package]
name = "elm-parser"
version = "0.1.0"
authors = ["Michael Jones <michael@zaptic.com>"]

[[bin]]
name = "elm-parser-dump"
path = "src/dump.rs"

[[bin]]
name = "elm-parser-check"
path = "src/check.rs"

[dependencies]
logos = "0.11.4"
regex = { version = "1.4.2" }
walkdir = "2.3.1"
clap = "2.33.3"
